--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <main class="profileContainer">
                 <img
                     id="profileImg"
-                    src="/images/dog-bella.jpg"
+                    src="./images/dog-bella.jpg"
                     alt=""
                     class="profileImage"
                 />
