the fixes keep on coming

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
             </main>
             <div class="swipeContainer">
                 <button id="crossBtn" class="swipeButton cross">
-                    <img src="/images/icon-cross.png" alt="" class="swipeButtonIcon" />
+                    <img src="./images/icon-cross.png" alt="" class="swipeButtonIcon" />
                 </button>
                 <button id="heartBtn" class="swipeButton heart">
-                    <img src="/images/icon-heart.png" alt="" class="swipeButtonIcon" />
+                    <img src="./images/icon-heart.png" alt="" class="swipeButtonIcon" />
                 </button>
             </div>
         </div>
