--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
                 </button>
             </div>
         </div>
-        <script src="./index.js" type="module"></script>
+        <script src="index.js" type="text/javascript"></script>
     </body>
 </html>
